--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -27,7 +27,7 @@
           </div>
         </div>
         <hr class="h-[3px] bg-oscuro border-oscuro" />
-        <p class="p-2">
+        <p class="p-2 text-lg">
           Durante mi periodo en Jostari, gestioné incidencias técnicas y
           optimicé pedidos y devoluciones desde <b>WordPress</b>.
           <br /><br />Trabajé con la configuración de plugins y edición en
@@ -57,7 +57,7 @@
           </div>
         </div>
         <hr class="h-[3px] bg-oscuro border-oscuro" />
-        <p class="p-2">
+        <p class="p-2 text-lg">
           Durante mi FCT, contribuí al desarrollo de una aplicación web y móvil
           utilizando <b>Angular</b> y <b>Tailwind</b>, además de utilizar
           <b>MongoDB</b> como base de datos. <br /><br />
@@ -87,7 +87,7 @@
           </div>
         </div>
         <hr class="h-[3px] bg-oscuro border-oscuro" />
-        <p class="p-2">
+        <p class="p-2 text-lg">
           Durante mi etapa en Gven, desarrollé una tienda online completamente
           funcional utilizando <b>WordPress</b>, integrando el sistema de pagos
           <b>Stripe</b> para facilitar transacciones seguras y eficientes.
