--- a/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
+++ b/src/app/components/proyectos/proyectos-info/proyectos-info.component.html
@@ -2,7 +2,7 @@
 @if (proyecto == 'fj') {
 <!-- Texto -->
 <div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
-  <div class="text-[1.05rem]">
+  <div class="text-lg">
     <h3 class="text-center text-4xl font-bold">FJ</h3>
     <br />
 
@@ -17,7 +17,7 @@
     <br />
 
     <p>Incluye:</p>
-    <ul class="list-inside list-disc">
+    <ul class="list-disc pl-5">
       <li>
         Línea de texto con retroalimentación en tiempo real para mejorar la
         escritura.
@@ -38,7 +38,7 @@
   </div>
   <div class="flex justify-between items-end">
     <div>
-      <p><b>Tecnologías utilizadas:</b></p>
+      <p class="text-xl"><b>Tecnologías utilizadas:</b></p>
       <div class="flex gap-4 iconos">
         <img
           src="https://cdn.simpleicons.org/angular/DD0031"
@@ -116,7 +116,7 @@
 @if (proyecto == 'informula') {
 <!-- Texto -->
 <div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
-  <div class="text-[1.05rem]">
+  <div class="text-lg">
     <h3 class="text-center text-4xl font-bold">Informula</h3>
     <br />
 
@@ -129,7 +129,7 @@
     <br />
 
     <p>Incluye:</p>
-    <ul class="list-inside list-disc">
+    <ul class="list-disc pl-5">
       <li>Contador regresivo en tiempo real para la próxima carrera.</li>
       <li>Clasificación actual de pilotos y equipos.</li>
       <li>
@@ -141,7 +141,7 @@
   </div>
   <div class="flex justify-between items-end">
     <div>
-      <p><b>Tecnologías utilizadas:</b></p>
+      <p class="text-xl"><b>Tecnologías utilizadas:</b></p>
       <div class="flex gap-4 iconos">
         <img
           src="https://cdn.simpleicons.org/angular/DD0031"
@@ -228,7 +228,7 @@
 @if (proyecto == 'gesclub') {
 <!-- Texto -->
 <div class="flex-[1.5] mx-2 flex flex-col justify-between p-5">
-  <div class="text-[1.05rem]">
+  <div class="text-lg">
     <h3 class="text-center text-4xl font-bold">Gesclub</h3>
     <br />
 
@@ -240,7 +240,7 @@
     <br />
 
     <p>Incluye:</p>
-    <ul class="list-inside list-disc">
+    <ul class="list-disc pl-5">
       <li>Gestión completa de socios con perfiles personalizados.</li>
       <li>
         Calendario de eventos y actividades con notificaciones automáticas.
@@ -254,7 +254,7 @@
   </div>
   <div class="flex justify-between items-end">
     <div>
-      <p><b>Tecnologías utilizadas:</b></p>
+      <p class="text-xl"><b>Tecnologías utilizadas:</b></p>
       <div class="flex gap-4 iconos">
         <img
           src="https://cdn.simpleicons.org/angular/DD0031"
